Zooming with NDOF device is inverted in Camera View #100953

Closed
opened 2022-09-09 22:29:49 +02:00 by Yan Kansky · 13 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94
NDOF device: 3Dconnexion SpaceMouse Compact [default settings]

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce [default settings]Worked: (never)Short description of errorZooming with mouse wheel is consistent acrossall editors in Blender, but zooming with NDOF device is inverted in Camera View in 3D Viewport. Please see the attached video and .blend file.
Blender_NDOF_Camera_Zoom_Inverted.mp4
Blender_NDOF_Camera_Zoom_Inverted.blend

Exact steps for others to reproduce the error

  1. Open the attached .blend file
  2. Zoom in all opened editors using mouse wheel
  3. Zoom in all opened editors using NDOF device to see the difference
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 NDOF device: 3Dconnexion SpaceMouse Compact **[default settings]** **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` **[default settings]**Worked: (never)**Short description of error**Zooming with mouse wheel is consistent across**all** editors in Blender, but zooming with NDOF device is inverted in Camera View in 3D Viewport. Please see the attached video and .blend file. [Blender_NDOF_Camera_Zoom_Inverted.mp4](https://archive.blender.org/developer/F13473826/Blender_NDOF_Camera_Zoom_Inverted.mp4) [Blender_NDOF_Camera_Zoom_Inverted.blend](https://archive.blender.org/developer/F13473828/Blender_NDOF_Camera_Zoom_Inverted.blend) **Exact steps for others to reproduce the error** 1. Open the attached .blend file 2. Zoom in all opened editors using mouse wheel 3. Zoom in all opened editors using NDOF device to see the difference
Author

Added subscriber: @YanKansky

Added subscriber: @YanKansky
Author

Tested again with new NVIDIA drivers.

Tested again with new NVIDIA drivers.
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Does toggling Lock Camera Pan/Zoom in Preferences > Input > NDOF fix the issue?

Does toggling Lock Camera Pan/Zoom in Preferences > Input > NDOF fix the issue?
Author

Hello, Omar! Turning this option "On" allows to pan/zoom the camera view instead of leaving the camera view when orbiting:
blender_ysQcCWf5cm.png
Please see the video demonstration:
blender_5jYelBfhYn.mp4
This is a new feature, and it is really great and helpful, I waited for it and love it. The only problem is that zooming with NDOF is inverted in Camera View, if you compare zooming in all other editors and zooming with the mouse scroll wheel. This inconsistency breaks the workflow and needs to be fixed.

Hello, Omar! Turning this option "On" allows to *pan/zoom the camera view instead of leaving the camera view when orbiting*: ![blender_ysQcCWf5cm.png](https://archive.blender.org/developer/F13488287/blender_ysQcCWf5cm.png) Please see the video demonstration: [blender_5jYelBfhYn.mp4](https://archive.blender.org/developer/F13488291/blender_5jYelBfhYn.mp4) This is a new feature, and it is really great and helpful, I waited for it and love it. The only problem is that zooming with NDOF is inverted in Camera View, if you compare zooming in all other editors and zooming with the mouse scroll wheel. This inconsistency breaks the workflow and needs to be fixed.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

I see, I misunderstood the problem.

@ideasman42 Can you take a look at this since you have the hardware and implemented the feature?

I see, I misunderstood the problem. @ideasman42 Can you take a look at this since you have the hardware and implemented the feature?
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

This issue was referenced by 6004e9d62b

This issue was referenced by 6004e9d62ba5c8c6935f5d146f05e148528f042a

This issue was referenced by fc0b1627eb

This issue was referenced by fc0b1627ebb821b1897cbca7f6ba9be29e52359a

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Campbell Barton self-assigned this 2022-10-07 08:51:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100953
No description provided.