Fix T100953: Zooming with NDOF is inverted in the camera view

Use convention for applying zoom in other 2D views.